# CTAFlow

./: .gitignore  AGENTS.md  BACKTESTER_OPTIMIZATIONS.md  BATCH_SCREENING_PLAN.md  BID_ASK_OPTIMIZATION_EXAMPLE.md  CALENDAR_EFFECTS_INTEGRATION_STATUS.md  CALENDAR_PATTERN_FIX_SUMMARY.md  CLAUDE.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  CROSS_TICKER_BATCHING_IMPLEMENTATION.md  DESEASONALIZATION_OPTIMIZATION_GUIDE.md  DUAL_BRANCH_CLASSIFICATION_GUIDE.md  EVENT_SCREENER_GUIDE.md  PATTERN_EXTRACTION_SUMMARY.md  PERFORMANCE_OPTIMIZATION_REPORT.md  README.md  __init__.py  config.py  dotenv.py  futures_framework(1).py  main.py  pyproject.toml  refresh_curve_calculations.py  requirements.txt  setup.py  test_contract_access.py  test_cross_product_spread_data.py  test_curve_evolution_analyzer.py  test_gpu_backtester.py  test_gpu_batching.py  test_pipeline_gpu.py  test_relative_imports.py  test_seasonal_analysis.py  test_unit_conversions.py
CTAFlow/: ZSH14-CBOT.scid  __init__.py  config.py  engine_diagnostics.csv  example_cl.csv  example_ng.csv  main.py
CTAFlow.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
data/: DataProcessor.py  data_client.py  example_data.csv  futures_curve_manager.py  futures_mappings.toml  market_data_processor.py  retrieval.py  signals_processing.py
docs/: example.csv  pattern_extraction_guide.md
examples/: cycles_example.py  deep_learning_predictor.ipynb  deseasonalized_vol.py  opening_returns_predictor.ipynb
exporters/: __init__.py  tidy.py
features/: feature_engineering.py
forecaster/: __init__.py  forecast.py
liquidity/: __init__.py  volume.py
notebooks/: classification_quickstart.py  dual_branch_training.ipynb
screeners/: __init__.py  orderflow_scan.py
screens/: debug_screen.py  df_ex.csv  df_ex_cumulative.csv  event_screens.py  futures_screens.py  load_results.py  pnl.csv  run_session_first_hours.py  sector_screener.ipynb  test_momentum_screen.py  trace_error.py
sierrapy/: __init__.py  parser.py
stats_utils/: special.py
strategy/: strategy.py
tests/: conftest.py  test_backtester_logic.py  test_backtester_ranking.py  test_event_study.py  test_fdr.py  test_gpu_backtester.py  test_historical_screener.py  test_historical_screener_regressions.py  test_horizon_mapper_stability.py  test_horizon_mapper_xy.py  test_intraday_response_windows.py  test_liquidity.py  (+15 more)
(+152 files in other folders)
