[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CTAFlow"
version = "1.0.0"
authors = [
    {name = "CTA Research Team", email = "research@example.com"},
]
description = "CTA positioning prediction system using COT data and technical analysis"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["cta", "commodity", "trading", "advisor", "machine-learning", "finance", "forecasting"]
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "lightgbm>=3.0.0",
    "xgboost>=1.5.0",
    "matplotlib>=3.3.0",
    "seaborn>=0.11.0",
    "tables>=3.6.0",
    "toml>=0.10.0",
    "tqdm>=4.60.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.10",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.900",
    "jupyter>=1.0",
    "ipykernel>=6.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/CTAFlow"
Documentation = "https://ctaflow.readthedocs.io/"
Repository = "https://github.com/yourusername/CTAFlow.git"
"Bug Tracker" = "https://github.com/yourusername/CTAFlow/issues"

[project.scripts]
ctaflow = "main:main"

[tool.setuptools]
packages = ["data", "forecaster", "strategy"]
py-modules = ["config", "main"]

[tool.setuptools.package-data]
"*" = ["*.toml", "*.md"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]